# OctoPrint-BambuCam

./: .codacy.yml  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  Taskfile.yml  babel.cfg  eslint.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  setup.py
.githooks/: check_translations_sync.sh
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bandit-sarif.yml  ci.yml  codeql.yml  docs.yml  i18n.yml  lint.yml  release.yml  vibe-coded.yml
docs/: getting-started.md  index.md  jsdoc.json  security.md
docs/api/: javascript.md  python.md
docs/architecture/: daemon.md  data-flow.md  octoprint-integration.md  overview.md  settings.md
docs/development/: contributing.md  docs.md  release-process.md  testing.md
docs/frontend/: i18n.md  ui-placements.md
docs/reference/: configuration.md  http-api.md
extras/: BambuCam.md  README.txt
extras/github/: bug_report.yml  feature_request.yml
octoprint_bambucam/: __init__.py  _version.py  autosync.py  bambu_connector.py  connector_led.py  daemon.py  ftp.py  mqtt.py  paths.py  timelapse_ops.py  transcode.py
octoprint_bambucam/static/css/: BambuCam.css
octoprint_bambucam/static/js/: BambuCam.js
octoprint_bambucam/templates/: bambucam_settings.jinja2  bambucam_tab.jinja2  bambucam_webcam.jinja2
octoprint_bambucam/translations/de/LC_MESSAGES/: messages.mo
scripts/: generate-jsdocs.sh
tests/: conftest.py  test_autosync.py  test_bambu_connector.py  test_connector_led.py  test_daemon.py  test_ftp.py  test_mqtt.py  test_plugin.py  test_timelapse_api.py  test_transcode.py
translations/: README.txt  messages.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
