[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BambuCam"
version = "0.1.0"
description = "Bambu Lab camera stream integration for OctoPrint"
authors = [
    {name = "Ajimaru", email = "ajimaru_gdr@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.9, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = [
    "OctoPrint>=1.10.0",
    "Pillow",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
octoprint_bambucam = ["vendor/webcamd_bambu/*"]

[tool.setuptools.packages.find]
include = [
    "octoprint_bambucam",
    "octoprint_bambucam.*"
]

[project.entry-points."octoprint.plugin"]
bambucam = "octoprint_bambucam"

[project.urls]
Homepage = "https://github.com/ajimaru/OctoPrint-BambuCam"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=octoprint_bambucam --cov-report=term-missing --cov-fail-under=90"

# ---------------------------------------------------------------------------
# Shared ignore set
#
# Every linter/formatter below is configured to skip the same paths that are
# listed in ``.gitignore`` (build artifacts, virtualenvs, caches, tool dirs,
# vendored/generated output). The tools do not share an ignore mechanism, so
# the list is mirrored into each tool's native syntax here, in ``.flake8``,
# ``.prettierignore``, ``.snyk``, ``.codacy.yml`` and ``eslint.config.mjs``.
# When you change ``.gitignore``, update those in lockstep.
# ---------------------------------------------------------------------------

[tool.pylint.master]
# Pylint (also run by Codacy) walks directories directly, so mirror the
# .gitignore set here. ``ignore`` matches base names, ``ignore-paths`` matches
# regex against the full path.
ignore = [
    ".venv",
    ".idea",
    ".ruff_cache",
    ".pytest_cache",
    ".ideas",
    ".vscode",
    ".development",
    ".logs",
    ".cache",
    ".codacy",
    "build",
    "dist",
    "site",
    "node_modules",
]
ignore-paths = [
    "^\\.venv.*/.*$",
    "^.*\\.egg-info/.*$",
    "^build/.*$",
    "^dist/.*$",
    "^site/.*$",
    "^node_modules/.*$",
    "^\\.development/.*$",
    "^\\.codacy/.*$",
]

[tool.pylint.messages_control]
# The daemon supervisor deliberately uses a few catch-all ``except Exception``
# blocks (child-output log pump, the state-change callback into plugin code,
# and the test_connection fallback) that must never let a background thread or
# probe crash. Narrowing those would change runtime behaviour, so the check is
# disabled project-wide rather than ignored inline.
disable = [
    "broad-exception-caught",
]

[tool.black]
# Project-wide column limit is 80 (matches flake8 and isort below).
line-length = 80
# Black honours .gitignore for implicitly discovered files; extend-exclude
# makes the same set explicit so it also holds when paths are passed directly.
extend-exclude = '''
/(
    \.venv[^/]*
  | \.idea
  | \.ruff_cache
  | \.pytest_cache
  | \.ideas
  | \.vscode
  | \.development
  | \.logs
  | \.cache
  | \.codacy
  | build
  | dist
  | site
  | node_modules
  | BambuCam\.egg-info
)/
'''

[tool.ruff]
line-length = 80
# Ruff already skips .gitignore entries by default; keep it explicit and add
# the same set so direct file arguments are excluded too.
respect-gitignore = true
extend-exclude = [
    ".venv*",
    ".idea",
    ".ruff_cache",
    ".pytest_cache",
    ".ideas",
    ".vscode",
    ".development",
    ".logs",
    ".cache",
    ".codacy",
    "build",
    "dist",
    "site",
    "node_modules",
    "*.egg-info",
]

[tool.isort]
profile = "black"
line_length = 80
extend_skip_glob = [
    ".venv*/*",
    ".idea/*",
    ".ruff_cache/*",
    ".pytest_cache/*",
    ".ideas/*",
    ".vscode/*",
    ".development/*",
    ".logs/*",
    ".cache/*",
    ".codacy/*",
    "build/*",
    "dist/*",
    "site/*",
    "node_modules/*",
    "*.egg-info/*",
]

[tool.djlint]
# Keep short style/anchor attributes on a single line: only wrap when a line
# actually exceeds the limit. Without this, djLint splits compact tags that are
# already well under 80 columns across multiple lines.
profile = "jinja"
max_line_length = 80
format_attribute_template_tags = false
